--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+
+    <TextView
+        android:id="@+id/recoverPassTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Forgot Password? Recover"
+        android:layout_below="@id/loginbtn"
+        android:textColor="@color/colourBlack"/>
+
+
+
     <TextView
         android:id="@+id/nothave_accountTv"
         android:layout_width="match_parent"
@@ -50,8 +62,9 @@
         android:text="Dont Have an account? Register here"
         android:textAlignment="center"
         android:gravity="center_horizontal"
-        android:layout_below="@id/loginbtn"
-        android:textColor="@color/colourBlack"/>
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/colourBlack"
+        android:layout_marginBottom="20dp" />
 
 
 
